tests/externInfo/dhrystone-exported/db/invalid/path/Proc3.c.ttp
./db/invalid/path/Proc3.c : 66.22-66.31 : -- value at line 68, column 8 --# #                                   PtrParOut ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + {0}# 
./db/invalid/path/Proc3.c : 68.12-68.18 : -- value at line 68, column 8 --# #                                   PtrGlb ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + {48} /\ != 0#  #-- value at line 69, column 17 --# #                                      PtrGlb ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + {48} /\ != 0# 
./db/invalid/path/Proc3.c : 69.17-69.24 : -- value at line 69, column 17 --# # counter ; signed int ; {522} /\ != 0#  #-- value at line 70, column 16 --# # counter ; signed int ; {553} /\ != 0# 
./db/invalid/path/Proc3.c : 70.17-70.26 : -- value at line 70, column 16 --# #                                    PtrParOut ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + {0}#  #-- value at line 76, column 8 --# #                                     PtrParOut ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + {0}# 
./db/invalid/path/Proc3.c : 70.29-70.35 : -- value at line 70, column 16 --# #                                    PtrGlb ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + {48} /\ != 0#  #-- value at line 76, column 8 --# #                                     PtrGlb ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + {48} /\ != 0# 
./db/invalid/path/Proc3.c : 76.18-76.25 : -- value at line 76, column 8 --# # IntGlob ; signed int ; {5} /\ != 0# 
./db/invalid/path/Proc3.c : 76.28-76.34 : -- value at line 76, column 8 --# #                                   PtrGlb ; pointer ; { feld__ASTREE___db_invalid_path_malloc_x_c_283 } + {48} /\ != 0# 
